Fix service on edit mode animation jumping
- Make sure that service limite hint text fits in the remaining duration space

--- a/src/components/FinalizeView/FinalizeView.scss
+++ b/src/components/FinalizeView/FinalizeView.scss
@@ -59,6 +59,10 @@ $submit-button-icon-size: 32;
       height: #{$submit-button-icon-size}px;
     }
   }
+
+  .error-text {
+    margin-top: 16px;
+  }
 }
 
 .confirm-button-container > :global(.mdc-button) {
