--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -89,6 +89,8 @@ p {
   font-size: 12px;
   text-align: center;
   margin-bottom: 0;
+  margin-top: 0;
+  line-height: 15px;
 }
 
 .error-text {
